// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Coffee Pop Up coffee options should sign up a user 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "bottom": "23%",
      "display": "flex",
      "elevation": 200,
      "height": 800.4,
      "justifyContent": "center",
      "left": "4%",
      "paddingLeft": "7%",
      "paddingVertical": "6%",
      "position": "absolute",
      "right": "4%",
      "top": "20%",
      "width": 684.5999999999999,
      "zIndex": 100,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontFamily": "JosefinSans-Bold",
            "fontSize": 25,
            "includeFontPadding": false,
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          },
          Object {
            "color": "black",
            "marginLeft": "2%",
          },
        ]
      }
    >
      Latte
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginBottom": "2%",
          "marginRight": "7%",
        }
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 30,
            },
            undefined,
            Object {
              "fontFamily": undefined,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        󰅖
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "height": "60%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": "1.4%",
          "paddingBottom": "4%",
          "paddingTop": "0%",
        }
      }
    >
      <RCTScrollView
        data={Array []}
        getItem={[Function]}
        getItemCount={[Function]}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
      >
        <View />
      </RCTScrollView>
    </View>
  </View>
  <TextInput
    testID="foo"
  >
    <View>
      <View
        collapsable={false}
        style={
          Object {
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#087562",
              "borderRadius": 13,
              "display": "flex",
              "flexDirection": "row",
              "height": 43,
              "justifyContent": "center",
              "opacity": 1,
              "width": 592.5,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#EFEFEF",
                "fontFamily": "Poppins-SemiBold",
                "fontSize": 17,
                "letterSpacing": 0.5,
              }
            }
          >
            Add To Order  £2.50
          </Text>
        </View>
      </View>
    </View>
  </TextInput>
</View>
`;

exports[`Coffee Pop Up should add a milk 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "bottom": "23%",
      "display": "flex",
      "elevation": 200,
      "height": 800.4,
      "justifyContent": "center",
      "left": "4%",
      "paddingLeft": "7%",
      "paddingVertical": "6%",
      "position": "absolute",
      "right": "4%",
      "top": "20%",
      "width": 684.5999999999999,
      "zIndex": 100,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontFamily": "JosefinSans-Bold",
            "fontSize": 25,
            "includeFontPadding": false,
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          },
          Object {
            "color": "black",
            "marginLeft": "2%",
          },
        ]
      }
    >
      Latte
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginBottom": "2%",
          "marginRight": "7%",
        }
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 30,
            },
            undefined,
            Object {
              "fontFamily": undefined,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        󰅖
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "height": "60%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": "1.4%",
          "paddingBottom": "4%",
          "paddingTop": "0%",
        }
      }
    >
      <RCTScrollView
        data={Array []}
        getItem={[Function]}
        getItemCount={[Function]}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
      >
        <View />
      </RCTScrollView>
    </View>
  </View>
  <View>
    <View
      collapsable={false}
      style={
        Object {
          "transform": Array [
            Object {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#087562",
            "borderRadius": 13,
            "display": "flex",
            "flexDirection": "row",
            "height": 43,
            "justifyContent": "center",
            "opacity": 1,
            "width": 592.5,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#EFEFEF",
              "fontFamily": "Poppins-SemiBold",
              "fontSize": 17,
              "letterSpacing": 0.5,
            }
          }
        >
          Add To Order  £2.50
        </Text>
      </View>
    </View>
  </View>
</View>
`;
